# comp_graphic_labs

lab_0/: Lab_0.md  main.cpp
lab_1/: main.cpp
lab_2/: main.cpp
lab_3/: CMakeLists.txt  Lab_3.md  main.cpp
lab_3/lib/glad/src/: glad.c
lab_4/: CMakeLists.txt  main.cpp
lab_5/: CMakeLists.txt  main.cpp
lab_5/lib/glad/include/glad/: glad.h
